test/error/0015-macro.c
/*
PATTERN: macro argument
*/

#define X(A, A) 0

